WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278659
[ Sonoma Debug arm64]: ASSERTION FAILED: m_clients.contains(client) in imported/w3c/web-platform-tests/media-source/URL-createObjectURL-null.html
https://bugs.webkit.org/show_bug.cgi?id=278659
Summary
[ Sonoma Debug arm64]: ASSERTION FAILED: m_clients.contains(client) in import...
Marta Darbinyan
Reported
2024-08-26 10:03:46 PDT
Observing the flaky crashes with assert failure on the following test on Sonoma Debug arm64. imported/w3c/web-platform-tests/media-source/URL-createObjectURL-null.html The test is also flaky failure on EWS on multiple PRs. History:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fmedia-source%2FURL-createObjectURL-null.html&version_name=Sonoma&flavor=wk2&style=debug&architecture=arm64
stderr: ASSERTION FAILED: m_clients.contains(client) /Volumes/Data/worker/macOS-Sonoma-Debug-WK2-Tests-EWS/build/Source/WebCore/html/track/VideoTrack.cpp(122) : void WebCore::VideoTrack::clearClient(VideoTrackClient &) 1 0x3336dedb8 WebCore::VideoTrack::clearClient(WebCore::VideoTrackClient&) 2 0x333376a2c WebCore::HTMLMediaElement::removeVideoTrack(WTF::Ref<WebCore::VideoTrack, WTF::RawPtrTraits<WebCore::VideoTrack>, WTF::DefaultRefDerefTraits<WebCore::VideoTrack>>&&) 3 0x331874c48 auto WebCore::MediaSource::removeSourceBuffer(WebCore::SourceBuffer&)::$_21::operator()<WebCore::HTMLMediaElement>(WebCore::HTMLMediaElement&) 4 0x331874ba0 WTF::Detail::CallableWrapper<WebCore::MediaSource::removeSourceBuffer(WebCore::SourceBuffer&)::$_21, void, WebCore::HTMLMediaElement&>::call(WebCore::HTMLMediaElement&) 5 0x33187bfb4 WTF::Function<void (WebCore::HTMLMediaElement&)>::operator()(WebCore::HTMLMediaElement&) const 6 0x33187bea4 WebCore::MediaSource::ensureWeakOnHTMLMediaElementContext(WTF::Function<void (WebCore::HTMLMediaElement&)>&&) const::$_31::operator()() 7 0x33187bdac WTF::Detail::CallableWrapper<WebCore::MediaSource::ensureWeakOnHTMLMediaElementContext(WTF::Function<void (WebCore::HTMLMediaElement&)>&&) const::$_31, void>::call() 8 0x11b0724d4 WTF::Function<void ()>::operator()() const 9 0x11b0e2618 WTF::ensureOnMainThread(WTF::Function<void ()>&&) 10 0x33183ef28 WebCore::MediaSource::ensureWeakOnHTMLMediaElementContext(WTF::Function<void (WebCore::HTMLMediaElement&)>&&) const 11 0x3318445b8 WebCore::MediaSource::removeSourceBuffer(WebCore::SourceBuffer&) 12 0x33183f090 WebCore::MediaSource::detachFromElement() 13 0x331847e74 WebCore::MediaSourceInterfaceMainThread::detachFromElement() 14 0x33336604c WebCore::HTMLMediaElement::detachMediaSource() 15 0x333365500 WebCore::HTMLMediaElement::~HTMLMediaElement() 16 0x333448414 WebCore::HTMLVideoElement::~HTMLVideoElement() 17 0x3334484d0 WebCore::HTMLVideoElement::~HTMLVideoElement() 18 0x333448704 WebCore::HTMLVideoElement::operator delete(WebCore::HTMLVideoElement*, std::destroying_delete_t, unsigned long) 19 0x333448668 WebCore::HTMLVideoElement::~HTMLVideoElement() 20 0x332f43384 WebCore::Node::removedLastRef() 21 0x32ea45a2c WebCore::Node::derefAllowingPartiallyDestroyed() const 22 0x32ea4580c WebCore::Node::deref() const 23 0x32f0335b4 WebCore::EventTarget::deref() 24 0x32f03353c WTF::DefaultRefDerefTraits<WebCore::EventTarget>::derefIfNotNull(WebCore::EventTarget*) 25 0x32f0334d0 WTF::Ref<WebCore::EventTarget, WTF::RawPtrTraits<WebCore::EventTarget>, WTF::DefaultRefDerefTraits<WebCore::EventTarget>>::~Ref() 26 0x32f033200 WTF::Ref<WebCore::EventTarget, WTF::RawPtrTraits<WebCore::EventTarget>, WTF::DefaultRefDerefTraits<WebCore::EventTarget>>::~Ref() 27 0x32f8ae260 WebCore::JSDOMWrapper<WebCore::EventTarget, WTF::RawPtrTraits<WebCore::EventTarget>>::~JSDOMWrapper() 28 0x32f8ae230 WebCore::JSEventTarget::~JSEventTarget() 29 0x32f803164 WebCore::JSEventTarget::~JSEventTarget() 30 0x32f791580 WebCore::JSEventTarget::destroy(JSC::JSCell*) 31 0x11cea37cc JSC::JSDestructibleObjectDestroyFunc::operator()(JSC::VM&, JSC::JSCell*) const com.apple.WebKit.WebContent.Development terminated (pid 45261) for reason: crash LEAK: 1 WebPageProxy Link:
https://ews-build.s3-us-west-2.amazonaws.com/macOS-Sonoma-Debug-WK2-Tests-EWS/a0068150-12679-clean-tree/imported/w3c/web-platform-tests/media-source/URL-createObjectURL-null-crash-log.txt
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-26 10:04:10 PDT
<
rdar://problem/134709579
>
EWS
Comment 2
2024-08-26 10:30:55 PDT
Test gardening commit
282748@main
(aa3b1ced9417): <
https://commits.webkit.org/282748@main
> Reviewed commits have been landed. Closing PR #32715 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 3
2024-09-27 11:42:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34370
Jean-Yves Avenard [:jya]
Comment 4
2024-09-27 11:56:16 PDT
***
Bug 280425
has been marked as a duplicate of this bug. ***
EWS
Comment 5
2024-09-30 17:18:20 PDT
Test gardening commit
284476@main
(c5c3c68877f4): <
https://commits.webkit.org/284476@main
> Reviewed commits have been landed. Closing PR #34478 and removing active labels.
EWS
Comment 6
2024-10-13 20:58:26 PDT
Committed
285110@main
(9a18e435893e): <
https://commits.webkit.org/285110@main
> Reviewed commits have been landed. Closing PR #34370 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 7
2024-10-29 00:22:27 PDT
***
Bug 273385
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug